--- a/_data/coll_ext/master_model/container_default-promotions-slider-detail.yml
+++ b/_data/coll_ext/master_model/container_default-promotions-slider-detail.yml
@@ -1,9 +1,11 @@
 model: 'default-promotions-slider-detail'
-design_model_page: 'subflex-sliderdetail-dist0'
+#design_model_page: 'subflex-sliderdetail-dist0'
+design_model_page: 'default-slider-dist0'
 design_detail_items: 'miniature-default'
 
 config_container_detail:
   force_url_with_id: false
+
 # config_article_detail:
 # config_container_list:
 config_article_list:
@@ -15,11 +17,11 @@ display_items_on_parent: false
 # how many children to display if display_items_on_parent: true on child sections
 dist_display_children: 99
 # force details items in child at a given dist
-activate_force_details: true
-dist_force_details: 0
+activate_force_details: false
+dist_force_details: 1
 # flag to update design model on a child, for detail items
-activate_current_model_detail_on_child: false
-force_current_model_detail_on_parent: false
+activate_current_model_detail_on_child: true
+force_current_model_detail_on_parent: true
 # config to hide page when page is displayed on a parent (display_items_on_parent=true)
 hide-page: false
 # display direct desc items, at dist 0, with priority mix > subsections_first
