--- a/_data/custom/home-page/navigation.yml
+++ b/_data/custom/home-page/navigation.yml
@@ -1,6 +1,8 @@
 # Masthead navigation links
 
 home-short-nav:
+  - title: 'Nos promotions actuelles'
+    url: /promotions/index.html
   - title: 'Marché biologique de saison'
     url: /alimentation/marche-biologique/index.html
   - title: 'Compléments alimentaires'
@@ -15,6 +17,8 @@ home-short-nav:
 masthead:
     # masthead-primary
   - title: 'masthead-primary'
+  - title: 'Nos promotions actuelles'
+    url: /promotions/index.html
   - title: 'Alimentation'
     url: /alimentation/index.html
   - title: 'Cosmétique & Hygiène'
