ajout nos-information/page-acceuil pour gestion contenu page acceuil

--- a/_data/coll_ext/model_list-detail-items/list-detail-items.yml
+++ b/_data/coll_ext/model_list-detail-items/list-detail-items.yml
@@ -1,4 +1,4 @@
-- title : 'Dernieres promotion :'
+- title : 'Sélection de produits :'
   collection: 'nos-promotions'
   force_display_coll_ext: true
   force_display_coll_ext_section: 'nos-promotions'
