ajout gestion images acceuil par collection, possible depuis editeur

--- a/_data/custom/home-page/img.yml
+++ b/_data/custom/home-page/img.yml
@@ -18,22 +18,22 @@
 
 #images bienvenu, nb=2 max
 
-image-acceuil :
-  - image: 'Bienvenue-lacasebiocoutras.jpg'
-    description-image: 'Bienvenue à La Case Bio, Coutras'
-    text: 'Une large gamme de produits proposés sur plus de 200m&sup2;'
-    icone-text: ''
-    lien: ''
-    description-lien: ''
-  - image: 'plan-googleearth-lacasebiocoutras.jpg'
-    description-image: 'plan googleearth de la Case Bio, Coutras'
-    text: '12bis rue Edouard Vaillant, 33230 Coutras'
-    icone-text: 'fa fa-map-marker fa-2x'
-    lien: '/qui-sommes-nous/index.html#qui-sommes-nous-nous-situer'
-    description-lien: 'Retrouvez toutes nos informations détaillées'
+# image-acceuil :
+#   - image: 'Bienvenue-lacasebiocoutras.jpg'
+#     description-image: 'Bienvenue à La Case Bio, Coutras'
+#     text: 'Une large gamme de produits proposés sur plus de 200m&sup2;'
+#     icone-text: ''
+#     lien: ''
+#     description-lien: ''
+#   - image: 'plan-googleearth-lacasebiocoutras.jpg'
+#     description-image: 'plan googleearth de la Case Bio, Coutras'
+#     text: 'Nous sommes situés au 12bis rue Edouard Vaillant, Coutras'
+#     icone-text: 'fa fa-map-marker fa-2x'
+#     lien: '/qui-sommes-nous/index.html#qui-sommes-nous-nous-situer'
+#     description-lien: 'Retrouvez toutes nos informations détaillées'
 
 # image intergrid nb=1 max, logo ab par défaut
-image-intergrid-acceuil :
-  - image : 'logo-ab.png'
-    description-image : 'La Case Bio est certifié AB, Agriculture Biologique'
+# image-intergrid-acceuil :
+#   - image : 'logo-ab.png'
+#     description-image : 'La Case Bio est certifié AB, Agriculture Biologique'
 
